# ImageCutter

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/cpp/: image.cpp  imageprocessor.cpp
src/headers/: image.h  imageprocessor.h  loggers.h  programoptions.h  programstatus.h  timer.h
